force-app/main/default/objects/Discrepancy__c/Discrepancy__c.object-meta.xml
<CustomObject>
    <label>Discrepancy</label>
    <nameField>
        <displayFormat>DIS-{0000}</displayFormat>
        <label>Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discrepancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>