force-app/main/default/objects/Discrepancy__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>