force-app/main/default/objects/Discrepancy__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Discrepancies</relationshipLabel>
    <relationshipName>Discrepancies</relationshipName>
    <type>Lookup</type>
</CustomField>