force-app/main/default/objects/Discrepancy__c/fields/Shipment_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Item</label>
    <referenceTo>ShipmentItem</referenceTo>
    <relationshipLabel>Discrepancies</relationshipLabel>
    <relationshipName>Discrepancies</relationshipName>
    <type>Lookup</type>
</CustomField>