force-app/main/default/objects/Discrepancy__c/fields/Shipping_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Quantity__c</fullName>
    <label>Shipping Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>