force-app/main/default/objects/Discrepancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Received_Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Shipment__c</columns>
    <columns>Shipment_Item__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Discrepancies</label>
</ListView>